--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@ stroke-linejoin="round" class="feather feather-home">
                 </li>
                 
                 <li>
-                    <a class="menu-link " href="/blog/about/">
+                    <a class="menu-link " href="/blog/pages/about/">
                         About
                     </a>
                     
