--- a/public/pages/about/index.html
+++ b/public/pages/about/index.html
@@ -3,11 +3,11 @@
 <meta http-equiv="content-type" content="text/html">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title itemprop="name">About | </title>
-<meta property="og:title" content="About | " />
-<meta name="twitter:title" content="About | " />
-<meta itemprop="name" content="About | " />
-<meta name="application-name" content="About | " />
+<title itemprop="name">About | Mobile Development Blog</title>
+<meta property="og:title" content="About | Mobile Development Blog" />
+<meta name="twitter:title" content="About | Mobile Development Blog" />
+<meta itemprop="name" content="About | Mobile Development Blog" />
+<meta name="application-name" content="About | Mobile Development Blog" />
 <meta property="og:site_name" content="Blog" />
 
 <meta name="description" content="Minimal Hugo blog theme with light and dark mode support">
@@ -29,6 +29,7 @@
 
     
     <meta property="og:url" content="http://localhost:1313/blog/pages/about/">
+  <meta property="og:site_name" content="Mobile Development Blog">
   <meta property="og:title" content="About">
   <meta property="og:description" content="This section is currently empty.">
   <meta property="og:locale" content="en_gb">
