--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -3,11 +3,11 @@
 <meta http-equiv="content-type" content="text/html">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title itemprop="name">Pages | </title>
-<meta property="og:title" content="Pages | " />
-<meta name="twitter:title" content="Pages | " />
-<meta itemprop="name" content="Pages | " />
-<meta name="application-name" content="Pages | " />
+<title itemprop="name">Pages | Mobile Development Blog</title>
+<meta property="og:title" content="Pages | Mobile Development Blog" />
+<meta name="twitter:title" content="Pages | Mobile Development Blog" />
+<meta itemprop="name" content="Pages | Mobile Development Blog" />
+<meta name="application-name" content="Pages | Mobile Development Blog" />
 <meta property="og:site_name" content="Blog" />
 
 <meta name="description" content="Minimal Hugo blog theme with light and dark mode support">
@@ -29,6 +29,7 @@
 
     
     <meta property="og:url" content="http://localhost:1313/blog/pages/">
+  <meta property="og:site_name" content="Mobile Development Blog">
   <meta property="og:title" content="Pages">
   <meta property="og:description" content="Minimal Hugo blog theme with light and dark mode support">
   <meta property="og:locale" content="en_gb">
@@ -45,8 +46,8 @@
     
 
     <link rel="canonical" href="http://localhost:1313/blog/pages/">
-    <link href="/blog/pages/index.xml" rel="alternate" type="application/rss+xml" title="">
-    <link href="/blog/pages/index.xml" rel="feed" type="application/rss+xml" title="">
+    <link href="/blog/pages/index.xml" rel="alternate" type="application/rss+xml" title="Mobile Development Blog">
+    <link href="/blog/pages/index.xml" rel="feed" type="application/rss+xml" title="Mobile Development Blog">
     <link href="/blog/style.min.2d921c18cf1ec555ffc03d59a8adc211c402c68c930c27d6a0c306ab175a8d09.css" rel="stylesheet">
     <link href="/blog/code-highlight.min.706d31975fec544a864cb7f0d847a73ea55ca1df91bf495fd12a177138d807cf.css" rel="stylesheet">
 
